Add Superior to the registry module, which all Region related operations can only be called by Superior account, instead of the Authority account
