# ts-client/enreach.registry/api.swagger.yml
@@ -171,6 +171,52 @@ paths:
           type: boolean
       tags:
         - Query
+  /enreach/registry/superior:
+    get:
+      operationId: Query_Superior
+      responses:
+        '200':
+          description: A successful response.
+          schema:
+            type: object
+            properties:
+              Superior:
+                type: object
+                properties:
+                  account:
+                    type: string
+                  creator:
+                    type: string
+                  createAt:
+                    type: string
+                    format: uint64
+                  updator:
+                    type: string
+                  updateAt:
+                    type: string
+                    format: uint64
+                  signer:
+                    type: string
+        default:
+          description: An unexpected error response.
+          schema:
+            type: object
+            properties:
+              code:
+                type: integer
+                format: int32
+              message:
+                type: string
+              details:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    '@type':
+                      type: string
+                  additionalProperties: {}
+      tags:
+        - Query
 definitions:
   Any:
     type: object
@@ -274,6 +320,26 @@ definitions:
           updateAt:
             type: string
             format: uint64
+  QueryGetSuperiorResponse:
+    type: object
+    properties:
+      Superior:
+        type: object
+        properties:
+          account:
+            type: string
+          creator:
+            type: string
+          createAt:
+            type: string
+            format: uint64
+          updator:
+            type: string
+          updateAt:
+            type: string
+            format: uint64
+          signer:
+            type: string
   QueryParamsResponse:
     type: object
     properties:
@@ -300,13 +366,36 @@ definitions:
       updateAt:
         type: string
         format: uint64
+  registry.Superior:
+    type: object
+    properties:
+      account:
+        type: string
+      creator:
+        type: string
+      createAt:
+        type: string
+        format: uint64
+      updator:
+        type: string
+      updateAt:
+        type: string
+        format: uint64
+      signer:
+        type: string
   MsgCreateRegionResponse:
     type: object
+  MsgCreateSuperiorResponse:
+    type: object
   MsgDeleteRegionResponse:
+    type: object
+  MsgDeleteSuperiorResponse:
     type: object
   MsgUpdateParamsResponse:
     type: object
   MsgUpdateRegionResponse:
+    type: object
+  MsgUpdateSuperiorResponse:
     type: object
   Params:
     type: object
