# x/registry/types/genesis.pb.go
@@ -27,9 +27,10 @@ const _ = proto.GoGoProtoPackageIsVersion3 // please upgrade the proto package
 // GenesisState defines the registry module's genesis state.
 type GenesisState struct {
 	// params defines all the parameters of the module.
-	Params      Params   `protobuf:"bytes,1,opt,name=params,proto3" json:"params"`
-	RegionList  []Region `protobuf:"bytes,2,rep,name=regionList,proto3" json:"regionList"`
-	RegionCount uint64   `protobuf:"varint,3,opt,name=regionCount,proto3" json:"regionCount,omitempty"`
+	Params      Params    `protobuf:"bytes,1,opt,name=params,proto3" json:"params"`
+	RegionList  []Region  `protobuf:"bytes,2,rep,name=regionList,proto3" json:"regionList"`
+	RegionCount uint64    `protobuf:"varint,3,opt,name=regionCount,proto3" json:"regionCount,omitempty"`
+	Superior    *Superior `protobuf:"bytes,4,opt,name=superior,proto3" json:"superior,omitempty"`
 }
 
 func (m *GenesisState) Reset()         { *m = GenesisState{} }
@@ -86,6 +87,13 @@ func (m *GenesisState) GetRegionCount() uint64 {
 	return 0
 }
 
+func (m *GenesisState) GetSuperior() *Superior {
+	if m != nil {
+		return m.Superior
+	}
+	return nil
+}
+
 func init() {
 	proto.RegisterType((*GenesisState)(nil), "enreach.registry.GenesisState")
 }
@@ -93,23 +101,25 @@ func init() {
 func init() { proto.RegisterFile("enreach/registry/genesis.proto", fileDescriptor_51fa8e90b1c27f6c) }
 
 var fileDescriptor_51fa8e90b1c27f6c = []byte{
-	// 245 bytes of a gzipped FileDescriptorProto
+	// 278 bytes of a gzipped FileDescriptorProto
 	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xe2, 0x92, 0x4b, 0xcd, 0x2b, 0x4a,
 	0x4d, 0x4c, 0xce, 0xd0, 0x2f, 0x4a, 0x4d, 0xcf, 0x2c, 0x2e, 0x29, 0xaa, 0xd4, 0x4f, 0x4f, 0xcd,
 	0x4b, 0x2d, 0xce, 0x2c, 0xd6, 0x2b, 0x28, 0xca, 0x2f, 0xc9, 0x17, 0x12, 0x80, 0xca, 0xeb, 0xc1,
 	0xe4, 0xa5, 0x04, 0x13, 0x73, 0x33, 0xf3, 0xf2, 0xf5, 0xc1, 0x24, 0x44, 0x91, 0x94, 0x48, 0x7a,
 	0x7e, 0x7a, 0x3e, 0x98, 0xa9, 0x0f, 0x62, 0x41, 0x45, 0x65, 0x31, 0x8c, 0x2e, 0x48, 0x2c, 0x4a,
-	0xcc, 0x2d, 0xc6, 0x29, 0x0d, 0x62, 0xe4, 0xe7, 0x41, 0xa4, 0x95, 0xd6, 0x32, 0x72, 0xf1, 0xb8,
-	0x43, 0x9c, 0x12, 0x5c, 0x92, 0x58, 0x92, 0x2a, 0x64, 0xcd, 0xc5, 0x06, 0xd1, 0x2f, 0xc1, 0xa8,
-	0xc0, 0xa8, 0xc1, 0x6d, 0x24, 0xa1, 0x87, 0xee, 0x34, 0xbd, 0x00, 0xb0, 0xbc, 0x13, 0xe7, 0x89,
-	0x7b, 0xf2, 0x0c, 0x2b, 0x9e, 0x6f, 0xd0, 0x62, 0x0c, 0x82, 0x6a, 0x11, 0xb2, 0xe3, 0xe2, 0x82,
-	0x98, 0xee, 0x93, 0x59, 0x5c, 0x22, 0xc1, 0xa4, 0xc0, 0x8c, 0xdd, 0x80, 0x20, 0xb0, 0x1a, 0x27,
-	0x16, 0x90, 0x01, 0x41, 0x48, 0x3a, 0x84, 0x14, 0xb8, 0xb8, 0x21, 0x3c, 0xe7, 0xfc, 0xd2, 0xbc,
-	0x12, 0x09, 0x66, 0x05, 0x46, 0x0d, 0x96, 0x20, 0x64, 0x21, 0x27, 0xa3, 0x13, 0x8f, 0xe4, 0x18,
-	0x2f, 0x3c, 0x92, 0x63, 0x7c, 0xf0, 0x48, 0x8e, 0x71, 0xc2, 0x63, 0x39, 0x86, 0x0b, 0x8f, 0xe5,
-	0x18, 0x6e, 0x3c, 0x96, 0x63, 0x88, 0x92, 0x80, 0x79, 0xb4, 0x02, 0xe1, 0xd5, 0x92, 0xca, 0x82,
-	0xd4, 0xe2, 0x24, 0x36, 0xb0, 0x57, 0x8d, 0x01, 0x01, 0x00, 0x00, 0xff, 0xff, 0x38, 0x08, 0x7d,
-	0x47, 0x85, 0x01, 0x00, 0x00,
+	0xcc, 0x2d, 0xc6, 0x29, 0x0d, 0x62, 0xe4, 0xe7, 0x41, 0xa5, 0xe5, 0x31, 0xa4, 0x8b, 0x4b, 0x0b,
+	0x52, 0x8b, 0x32, 0xf3, 0x8b, 0x20, 0x0a, 0x94, 0x9e, 0x32, 0x72, 0xf1, 0xb8, 0x43, 0xdc, 0x1a,
+	0x5c, 0x92, 0x58, 0x92, 0x2a, 0x64, 0xcd, 0xc5, 0x06, 0xb1, 0x40, 0x82, 0x51, 0x81, 0x51, 0x83,
+	0xdb, 0x48, 0x42, 0x0f, 0xdd, 0xed, 0x7a, 0x01, 0x60, 0x79, 0x27, 0xce, 0x13, 0xf7, 0xe4, 0x19,
+	0x56, 0x3c, 0xdf, 0xa0, 0xc5, 0x18, 0x04, 0xd5, 0x22, 0x64, 0xc7, 0xc5, 0x05, 0xb1, 0xde, 0x27,
+	0xb3, 0xb8, 0x44, 0x82, 0x49, 0x81, 0x19, 0xbb, 0x01, 0x41, 0x60, 0x35, 0x4e, 0x2c, 0x20, 0x03,
+	0x82, 0x90, 0x74, 0x08, 0x29, 0x70, 0x71, 0x43, 0x78, 0xce, 0xf9, 0xa5, 0x79, 0x25, 0x12, 0xcc,
+	0x0a, 0x8c, 0x1a, 0x2c, 0x41, 0xc8, 0x42, 0x42, 0x66, 0x5c, 0x1c, 0x30, 0x1f, 0x48, 0xb0, 0x80,
+	0x1d, 0x28, 0x85, 0x69, 0x7e, 0x30, 0x54, 0x45, 0x10, 0x5c, 0xad, 0x93, 0xd1, 0x89, 0x47, 0x72,
+	0x8c, 0x17, 0x1e, 0xc9, 0x31, 0x3e, 0x78, 0x24, 0xc7, 0x38, 0xe1, 0xb1, 0x1c, 0xc3, 0x85, 0xc7,
+	0x72, 0x0c, 0x37, 0x1e, 0xcb, 0x31, 0x44, 0x49, 0xc0, 0x82, 0xa8, 0x02, 0x11, 0x48, 0x25, 0x95,
+	0x05, 0xa9, 0xc5, 0x49, 0x6c, 0xe0, 0x20, 0x32, 0x06, 0x04, 0x00, 0x00, 0xff, 0xff, 0x85, 0x9d,
+	0xe5, 0x7b, 0xde, 0x01, 0x00, 0x00,
 }
 
 func (m *GenesisState) Marshal() (dAtA []byte, err error) {
@@ -132,6 +142,18 @@ func (m *GenesisState) MarshalToSizedBuffer(dAtA []byte) (int, error) {
 	_ = i
 	var l int
 	_ = l
+	if m.Superior != nil {
+		{
+			size, err := m.Superior.MarshalToSizedBuffer(dAtA[:i])
+			if err != nil {
+				return 0, err
+			}
+			i -= size
+			i = encodeVarintGenesis(dAtA, i, uint64(size))
+		}
+		i--
+		dAtA[i] = 0x22
+	}
 	if m.RegionCount != 0 {
 		i = encodeVarintGenesis(dAtA, i, uint64(m.RegionCount))
 		i--
@@ -191,6 +213,10 @@ func (m *GenesisState) Size() (n int) {
 	}
 	if m.RegionCount != 0 {
 		n += 1 + sovGenesis(uint64(m.RegionCount))
+	}
+	if m.Superior != nil {
+		l = m.Superior.Size()
+		n += 1 + l + sovGenesis(uint64(l))
 	}
 	return n
 }
@@ -316,6 +342,42 @@ func (m *GenesisState) Unmarshal(dAtA []byte) error {
 					break
 				}
 			}
+		case 4:
+			if wireType != 2 {
+				return fmt.Errorf("proto: wrong wireType = %d for field Superior", wireType)
+			}
+			var msglen int
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowGenesis
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				msglen |= int(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
+			if msglen < 0 {
+				return ErrInvalidLengthGenesis
+			}
+			postIndex := iNdEx + msglen
+			if postIndex < 0 {
+				return ErrInvalidLengthGenesis
+			}
+			if postIndex > l {
+				return io.ErrUnexpectedEOF
+			}
+			if m.Superior == nil {
+				m.Superior = &Superior{}
+			}
+			if err := m.Superior.Unmarshal(dAtA[iNdEx:postIndex]); err != nil {
+				return err
+			}
+			iNdEx = postIndex
 		default:
 			iNdEx = preIndex
 			skippy, err := skipGenesis(dAtA[iNdEx:])
